--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-annotations-api</artifactId>
+            <version>9.0.30</version>
+        </dependency>
     </dependencies>
 
     <build>
